# nuAnalysis

./: .gitignore  README.md  analysis.ipynb  analysis_crosschecks.ipynb  make_fileconfig.py  test.sh
AnalsyisZipFramework/: CMakeLists.txt  README.md  analysis.cxx  setup.sh
AnalsyisZipFramework/config/: config.json  run_list.txt
AnalsyisZipFramework/include/: Analysis.h  GRLUtils.h  MessageService.hpp
AnalsyisZipFramework/scripts/: make_fileconfig.py
AnalsyisZipFramework/source/: Analyis.cxx  GRLUtitls.cxx
AnalsyisZipFramework/submission/: analysis.sub  run_analysis.sh  run_list.txt  run_submission.sh
AnalysisZipFramework/: analysis.cxx  setup.sh
AnalysisZipFramework/config/: file_config.json  run_list.txt
AnalysisZipFramework/include/: Analysis.h  GRLUtils.h  RDFDefines.h
AnalysisZipFramework/scripts/: make_fileconfig.py
AnalysisZipFramework/source/: Analyis.cxx
AnalysisZipFramework/submission/: analysis.sub  run_analysis.sh  run_submission.sh
